force-app/main/default/objects/Account/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City name</description>
    <inlineHelpText>Write the city`s name</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>