force-app/main/default/objects/Account/fields/ClientType__c.field-meta.xml
<CustomField>
    <fullName>ClientType__c</fullName>
    <description>Wich Type is the client</description>
    <inlineHelpText>Choose on the picklist the client type</inlineHelpText>
    <label>Client Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Clients_Type</valueSetName>
    </valueSet>
</CustomField>