force-app/main/default/objects/Account/fields/CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CNPJ__c</fullName>
    <description>The CNPJ of the client</description>
    <externalId>true</externalId>
    <inlineHelpText>Write down the CNPJ</inlineHelpText>
    <label>CNPJ</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>