force-app/main/default/objects/Account/fields/Complement__c.field-meta.xml
<CustomField>
    <fullName>Complement__c</fullName>
    <description>The complement of the build</description>
    <inlineHelpText>Write the complement</inlineHelpText>
    <label>Complement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>