force-app/main/default/objects/Account/fields/DateFirstPurchase__c.field-meta.xml
<CustomField>
    <fullName>DateFirstPurchase__c</fullName>
    <label>First Purchase Date</label>
    <type>Date</type>
</CustomField>