force-app/main/default/objects/Account/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>Number of the build on the street</description>
    <inlineHelpText>Write the number</inlineHelpText>
    <label>Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>