force-app/main/default/objects/Account/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <description>The state of the account</description>
    <inlineHelpText>Choose the state on the picklist</inlineHelpText>
    <label>States</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>