force-app/main/default/objects/Account/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>The street of the account</description>
    <inlineHelpText>Write the street name</inlineHelpText>
    <label>Street</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>