force-app/main/default/objects/Account/validationRules/CNPJ_Validator.validationRule-meta.xml
<ValidationRule>
    <fullName>CNPJ_Validator</fullName>
    <active>true</active>
    <description>Only accepts entries with 18 characters and validated formatting</description>
    <errorConditionFormula>AND(
   NOT(ISBLANK(CNPJ__c)),
   NOT(
      REGEX(CNPJ__c, &quot;\\d{2}\\.\\d{3}\\.\\d{3}/\\d{4}-\\d{2}&quot;)
   )
)</errorConditionFormula>
    <errorMessage>CNPJ entered incorrectly, try filling in this format: 00.000.000/0001-00</errorMessage>
</ValidationRule>