force-app/main/default/objects/Account/listViews/RetailAccount.listView-meta.xml
<ListView>
    <fullName>RetailAccount</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ClientType__c</field>
        <operation>equals</operation>
        <value>retail</value>
    </filters>
    <label>Retail Account</label>
</ListView>